# libparakeet-js

./: .clangd  .dockerignore  .editorconfig  .gitignore  .gitmodules  CHANGELOG.MD  CMakeLists.txt  Dockerfile  Makefile  README.MD  RELEASE.MD  build.sh  js-sdk.code-workspace
.github/workflows/: build-wasm.yml
config.local/: README.MD
npm/: .eslintrc.cjs  .prettierignore  build-all.mjs  package.json  pnpm-lock.yaml  rollup.config.mjs  test.html  tsconfig.json
npm/patches/: @rollup__plugin-wasm@6.1.2.patch
npm/src/: .gitignore  factory.ts  index.ts  inline.ts  libparakeet-wasm.mjs  libparakeet.d.ts  test.ts  types.ts
npm/src/__test__/: wasm.test.ts
npm/src/types/: DummyTest.ts  ParakeetAudio.ts  ParakeetCryptoKGM.ts  ParakeetCryptoKuwo.ts  ParakeetCryptoMigu.ts  ParakeetCryptoNetease.ts  ParakeetCryptoQMC.ts  ParakeetCryptoQRC.ts  ParakeetCryptoQingTingFM.ts  ParakeetCryptoTransparent.ts  ParakeetCryptoXimalayaAndroid.ts  ParakeetInterface.ts  ParakeetQMCFooterParser.ts  ParakeetQMCKeyCrypto.ts  ParakeetTransformers.ts  UtilsBase64.ts  UtilsTcTea.ts  wasm.ts
npm/src/types/c-interfaces/: ReaderWriter.ts
npm/src/utils/: ArrayBufferBridge.ts  QMCv2FooterParser.ts  Transformer.ts  bufferHelper.ts
npm/src/wrapper/: Base64.ts  Parakeet.ts  ParakeetFactory.ts  QMCv2FooterParser.ts  QMCv2KeyCrypto.ts  QtfmHelper.ts  TcTea.ts
npm/src/wrapper/__test__/: audio.test.ts  base64.test.ts  key-crypto.test.ts  quick-sanity.test.ts  tc-tea.test.ts
src/: em_audio.cpp  em_crypto_kgm.cpp  em_crypto_kuwo.cpp  em_crypto_migu3d.cpp  em_crypto_ncm.cpp  em_crypto_qingting.cpp  em_crypto_qmc.cpp  em_crypto_qmc_footer_parser.cpp  em_crypto_qmc_key_crypto.cpp  em_crypto_qrc.cpp  em_crypto_transparent.cpp  em_crypto_xmly_android.cpp  em_memory.cpp  em_rw_interfaces.cpp  em_rw_interfaces.h  em_transformer.cpp  em_util_base64.cpp  em_util_tc_tea.cpp  factory.cpp  factory.h  helper.h
